Diversas adições ao código-fonte
* Adição de novas transições entre telas;
* Nova divisão das funções internas:
  - Funções auxiliares; e
  - Funções principais.
* Alternativas do modo 'Difícil' reorganizadas.

--- a/Braile-download/Braile.cbp
+++ b/Braile-download/Braile.cbp
@@ -34,7 +34,10 @@
 		<Unit filename="Braile.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="functions.c">
+		<Unit filename="funcOpts.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functAuxiliar.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
