Arquivos do jogo reorganizados
Foi alterada a extensão dos arquivos auxiliares do jogo de ".c" para ".h", para facilitar o desenvolvimento do projeto.

--- a/Braile-download/Braile.cbp
+++ b/Braile-download/Braile.cbp
@@ -34,12 +34,8 @@
 		<Unit filename="Braile.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="funcOpts.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="functAuxiliar.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Unit filename="funcOpts.h" />
+		<Unit filename="functAuxiliar.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
