--- a/Braile-download/Braile.cbp
+++ b/Braile-download/Braile.cbp
@@ -14,6 +14,12 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="mingw32" />
+					<Add library="SDL2main" />
+					<Add library="SDL2" />
+					<Add library="SDL2_mixer" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Braile" prefix_auto="1" extension_auto="1" />
