adicionado código de leitura de pontuação

--- a/Braile.cbp
+++ b/Braile.cbp
@@ -36,9 +36,20 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="C:/Users/guilh/OneDrive/Documentos/Projetos GitHub/JogoDoBraile/libs/SDL2-2.28.5/x86_64-w64-mingw32/include/SDL2" />
+			<Add directory="C:/Users/guilh/OneDrive/Documentos/Projetos GitHub/JogoDoBraile/libs/SDL2_mixer-2.8.0/x86_64-w64-mingw32/include/SDL2" />
 		</Compiler>
 		<Linker>
 			<Add option="-lwinmm" />
+			<Add option="-lSDL2" />
+			<Add option="-lSDL2main" />
+			<Add option="-lSDL2_mixer" />
+			<Add library="mingw32" />
+			<Add library="SDL2" />
+			<Add library="SDL2main" />
+			<Add library="SDL2_mixer" />
+			<Add directory="C:/Users/guilh/OneDrive/Documentos/Projetos GitHub/JogoDoBraile/libs/SDL2-2.28.5/x86_64-w64-mingw32/lib" />
+			<Add directory="C:/Users/guilh/OneDrive/Documentos/Projetos GitHub/JogoDoBraile/libs/SDL2_mixer-2.8.0/x86_64-w64-mingw32/lib" />
 		</Linker>
 		<Unit filename="aux-threads.h" />
 		<Unit filename="config-functions.h" />
@@ -50,6 +61,7 @@
 		<Unit filename="resources.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
+		<Unit filename="savesystem.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
